@@ -37,6 +37,7 @@ CHANGELOG Roundcube Webmail
 - Add METADATA extension support into IMAP classes (RFC5464)
 - Fix decoding of e-mail address strings in message headers (#1487068)
 - Fix handling of attachments when Content-Disposition is not inline nor attachment (#1487051)
+- Improve performance of unseen messages counting (#1487058)
 
 RELEASE 0.4.2
 -------------
